addons/jaeger/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query-ingress
  namespace: jaeger
  annotations:
    alb.ingress.kubernetes.io/group.name: jaeger-query
    alb.ingress.kubernetes.io/scheme: internet-facing # internal
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=Plugins
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:652084867515:certificate/bc65bac6-a5e8-4ee0-bcce-6f98d0acf32e

spec:
  ingressClassName: alb
  rules:
    - host: "jaeger.leemons.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 80
